opam-version: "2.0"
maintainer: "Hezekiah M. Carty <hez@0ok.org>"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/hcarty/ocaml-plplot/"
dev-repo: "https://github.com/hcarty/ocaml-plplot.git"
bug-reports: "https://github.com/hcarty/ocaml-plplot/issues"
build: [
  ["ocaml" "setup.ml" "-configure" "--enable-tests" {with-test} "--prefix" prefix]
  ["ocaml" "setup.ml" "-build"]
  ["ocaml" "setup.ml" "-test"] {with-test}
]
install: ["ocaml" "setup.ml" "-install"]
depends: [
  "ocaml" {>= "4.02.0"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "stdlib-shims" {build}
]
depexts: [
  [["debian"] ["libplplot-dev"]]
  [["ubuntu"] ["libplplot-dev"]]
  [[ "osx" "homebrew" ] [ "plplot" ]]
]
synopsis: "Bindings for the PLplot library"
descr: """PLplot is a library for creating scientific plots.
http://plplot.sf.net/
"""