opam-version: "2.0"
maintainer: "Hezekiah M. Carty <hez@0ok.org>"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/hcarty/ocaml-plplot/"
dev-repo: "https://github.com/hcarty/ocaml-plplot.git"
bug-reports: "https://github.com/hcarty/ocaml-plplot/issues"
build: [
  ["dune" "build" "-p" name]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "2.0.0"}
  "dune-configurator"
]
depexts: [
  [["debian"] ["libplplot-dev"]]
  [["ubuntu"] ["libplplot-dev"]]
  [[ "osx" "homebrew" ] [ "plplot" ]]
]
synopsis: "Bindings for the PLplot library"
descr: """PLplot is a library for creating scientific plots.
http://plplot.sf.net/
"""