opam-version: "2.0"
maintainer: "Hezekiah M. Carty <hez@0ok.org>"
authors: [ "Hezekiah M. Carty <hez@0ok.org>" ]
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
homepage: "https://github.com/hcarty/ocaml-plplot/"
dev-repo: "git+https://github.com/hcarty/ocaml-plplot.git"
bug-reports: "https://github.com/hcarty/ocaml-plplot/issues"
doc: "https://hcarty.github.io/ocaml-plplot/plplot"
build: [
  [
      "dune" "build" "-p" name "-j" jobs
      "@doc" {with-doc}
  ]
]
depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "2.0.0"}
  "dune-configurator"
  "conf-plplot"
  "odoc" {with-doc}
]
synopsis: "Bindings for the PLplot library"
description: "PLplot is a library for creating scientific plots http://plplot.sf.net/"
