(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ../configure/discover.exe)))

(library
 (name plplot)
 (public_name plplot)
 (private_modules plplot_core)
 (foreign_stubs
  (language c)
  (names plplot_core_stubs plplot_impl idlalloc)
  (flags
   :standard
   -g
   -O2
   -Wno-error=incompatible-pointer-types
   (:include c_flags.sexp)))
 (c_library_flags
  :standard
  (:include c_library_flags.sexp)))
